[package]
name = "procedural_trees_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.17.3", features = ["bevy_dev_tools"]}
bevy_egui = "0.38.1"
rand = "0.9.2"

#[target.wasm32-unknown-unknown]
#runner = "wasm-server-runner"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
